--- a/posts/rnn-1/index.ipynb
+++ b/posts/rnn-1/index.ipynb
@@ -8,6 +8,7 @@
     "title: \"Introduction to RNNs\"\n",
     "author: \"Maximilian Weichart\"\n",
     "date: \"August 12, 2023\"\n",
+    "image: ./images/rnn-unrolled.png\n",
     "---"
    ]
   },
