Explicit twitter card

--- a/posts/rnn-1/index.ipynb
+++ b/posts/rnn-1/index.ipynb
@@ -8,7 +8,9 @@
     "title: \"Introduction to RNNs\"\n",
     "author: \"Maximilian Weichart\"\n",
     "date: \"August 12, 2023\"\n",
-    "image: ./images/rnn-unrolled.png\n",
+    "image: images/rnn-unrolled.png\n",
+    "twitter-card:\n",
+    "    image: images/rnn-unrolled.png\n",
     "---"
    ]
   },
