--- a/posts/rnn-1/index.ipynb
+++ b/posts/rnn-1/index.ipynb
@@ -9,6 +9,7 @@
     "author: \"Maximilian Weichart\"\n",
     "date: \"August 12, 2023\"\n",
     "image: images/rnn-unrolled.png\n",
+    "description: Recurrent Neural Networks are a fundamental concept to understand and offer strengths that uni-directional neural networks lack. How can we use one to predict stock prices?\n",
     "---"
    ]
   },
