--- a/posts/rnn-1/index.ipynb
+++ b/posts/rnn-1/index.ipynb
@@ -686,7 +686,7 @@
     "\n",
     "---\n",
     "\n",
-    "Thank you [Salman](https://github.com/ForBo7) for proof reading an early version and recommending quarto for publishing."
+    "Thank you [Salman](https://github.com/ForBo7) for proof reading and recommending quarto for publishing."
    ]
   },
   {
