--- a/posts/uninformed-search/index.ipynb
+++ b/posts/uninformed-search/index.ipynb
@@ -9,7 +9,7 @@
     "author: \"Maximilian Weichart\"\n",
     "date: \"September 23, 2023\"\n",
     "image: images/dfs.png\n",
-    "description: Introduction to search algorithms, that are fundamental for understanding artificial intelligence.\n",
+    "description: Introduction to search algorithms - a fundamental for understanding artificial intelligence.\n",
     "---"
    ]
   },
@@ -21,7 +21,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "Search is a very broad term in artificial intelligence. What seems so intuitive to us as humans, such as finding an efficient route from city A to city B when looking at a map, is not so straightforward when we want a computer to do the same thing.\n",
+    "Search is a very broad term in the field of artificial intelligence. What seems so intuitive to us as humans, such as finding an efficient route from city A to city B when looking at a map, is not so straightforward when we want a computer to do the same thing.\n",
     "\n",
     "At very first glance, a simple thing such as search may seem irrelevant when we want to create artificial intelligence. It may seem boring, over-simplistic or useless to solve this problem, but it turns out that most of what's considered artificial intelligence today is per definition just a search problem and in fact, it is solved by one of these simple search algorithms - gradient descent - which is just as simple as any of its relatives, be it from the informed or uninformed, global or local category.\n",
     "\n",
