--- a/posts/simulated-annealing/index.ipynb
+++ b/posts/simulated-annealing/index.ipynb
@@ -830,7 +830,9 @@
     "\n",
     "Leveraging the concepts discussed in this article, simulated annealing can be used not only to find solutions to simple problems as with our function $f(x)$, but for *any* search problem, no matter how complex. As long as there's a cost function and a temperature schedule, simulated annealing is guaranteed to find the optimal solution, given enough time and a temperature schedule that decreases slowly enough.\n",
     "\n",
-    "The concepts in this article have even more depth to them. For example, one could ask: why is the Boltzmann distribution defined the way it is? Or how could one find the optimal temperature for the algorithm? All these are questions that deserve their own time to discuss. This article should just give a well reasoned intuition of why it works at all."
+    "The concepts in this article have even more depth to them. For example, one could ask: why is the Boltzmann distribution defined the way it is? Or how could one find the optimal temperature for the algorithm? All these are questions that deserve their own time to discuss. This article should just give a well reasoned intuition of why it works at all.\n",
+    "\n",
+    "*Thank you, Vishal, Alex, and the rest of the FastAI MeetUp on Discord for providing feedback for this article.*"
    ]
   },
   {
