--- a/posts/rnn-1/index.ipynb
+++ b/posts/rnn-1/index.ipynb
@@ -682,7 +682,7 @@
     "\n",
     "Until now, we used the same three weights for all of our predictions and simple linear layers to make the predictions. However, we could use backpropagation to train the model to recognize more patterns like the zic-zac, and we could also increase the number of layers, so it can recognize a wider variety of shapes.\n",
     "\n",
-    "But how do we actually find the correct weights with backpropagation to improve our model? Why do the three weights we used so far just magically work? We'll reveal all these mysteries in part 2 of this series...\n",
+    "But how do we actually find the correct weights with backpropagation to improve our model? Why do the three weights we used so far just magically work? We'll reveal all these mysteries in [Part 2](../rnn-2) of this series...\n",
     "\n",
     "---\n",
     "\n",
@@ -718,7 +718,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
