--- a/posts/uniform-circle-sampling/index.ipynb
+++ b/posts/uniform-circle-sampling/index.ipynb
@@ -29,6 +29,10 @@
     "\n",
     "Before reading this post, I recommend watching the video, as it covers rejection sampling and polar coordinate methods to solve this problem. In the following sections, I will present another solution that neither relies on rejection sampling nor polar coordinates, but instead utilizes the equation of a circle directly. Why would you want to know about all this? I'm not sure, but maybe this simple problem stimulates your curiosity like it did for me, so I recommend doing it for this purpose alone.\n",
     "\n",
+    "::: {.callout-note}\n",
+    "As already mentioned, there exist many solutions to this problem, like the rejection-sampling method. This post is about the result of my own ideas of thinking about the problem, but of course, these are not new and can be found in the existing approaches.\n",
+    ":::\n",
+    "\n",
     "# Uniform Sampling\n",
     "\n",
     "## Naive Approach\n",
@@ -39,7 +43,7 @@
     "y^2 + x^2 = r^2\n",
     "$$ {#eq-r}\n",
     "\n",
-    "Using @eq-r, random points on the circumference of a circle can be sampled by selecting random values for $x \\in [0,r]$ and calculating the corresponding $y$) value (or vice versa). However, @eq-r yields all points on a circle of a specified radius, whereas our objective is to sample uniformly from the entire area within the circle. This can be achieved by additionally sampling the radius as $r_{\\text{sampled}} \\in [0,r]$. To summarize, the following procedure can be followed *as out first attempt* to sample points uniformly within a circle of radius $r = 1$:\n",
+    "Using @eq-r, random points *on* a circle can be sampled by selecting random values for $x \\in [0,r]$ and calculating the corresponding $y$ value (or vice versa). This only gives us points lying *on* the circle, whereas our objective is to sample uniformly from the entire area *within* the circle. This can be achieved by additionally sampling the radius as $r_{\\text{sampled}} \\in [0,r]$. To summarize, the following procedure can be followed as our **first attempt** to sample points uniformly within a circle of radius $r = 1$:\n",
     "\n",
     "1. Sample $r_{\\text{sampled}} \\in [0,1]$\n",
     "2. Sample $x \\in [0, r_{\\text{sampled}}]$\n",
@@ -173,7 +177,7 @@
    "id": "a0407e94-79ea-468f-bf5f-ac5fd882a648",
    "metadata": {},
    "source": [
-    "Now we notice the second problem: It seems like there are fewer points on the bottom of the circle. To explain what's going on, it's easier to look at a single circle generated with this approach."
+    "Now we notice the second problem: It seems like there are fewer points at the bottom of the diagram. To explain what's going on, it's easier to look at a single circle generated with this approach."
    ]
   },
   {
